--- a/resources/lang/pl.json
+++ b/resources/lang/pl.json
@@ -1,35 +1,35 @@
 {
-    "Email": "Email",
-    "Password": "Пароль",
-    "Remember me": "Запомнить меня",
-    "Log in": "Войти",
-    "Forgot your password?": "Забыли свой пароль?",
-    "Login": "Войти",
-    "Confirm Password": "Подтвердите пароль",
-    "Register": "Регистрация",
-    "Already registered?": "Уже зарегистрированы?",
-    "Students": "Cтуденты",
-    "Companies": "Компании",
-    "Offers": "Вакансии",
-    "Home": "Главная страница",
-    "Position": "Должность",
-    "Category": "Категория",
-    "City": "Город",
-    "Region": "Регион",
-    "Salary": "Зарплата",
-    "app/students.search": "Поиск",
-    "Only paid offers": "Только оплачиваемые вакансии",
-    "Confirm": "Подтвердить",
-    "Email Password Reset Link": "Ссылка для сброса пароля по электронной почте",
-    "Forgot your password? No problem. Just let us know your email address and we will email you a password reset link that will allow you to choose a new one.": "Забыли пароль? Нет проблем. Просто сообщите нам свой адрес электронной почты, и мы пришлем вам ссылку для сброса пароля, по которой вы сможете выбрать новый.",
-    "Reset Password": "Сброс пароля",
-    "Student": "Студент",
-    "Company": "Компания",
-    "Thanks for signing up! Before getting started, could you verify your email address by clicking on the link we just emailed to you? If you didn't receive the email, we will gladly send you another.": "Спасибо, что зарегистрировались! Прежде чем приступить к работе, не могли бы вы подтвердить свой адрес электронной почты, нажав на ссылку, которую мы только что отправили вам по электронной почте? Если вы не получили письмо, мы с радостью вышлем вам другое.",
-    "A new verification link has been sent to the email address you provided during registration.": "На адрес электронной почты, указанный вами при регистрации, была отправлена новая ссылка для проверки.",
-    "Resend Verification Email": "Повторная отправка проверочного письма",
-    "Log out": "Выйти",
-    "Profil studenta": "Профиль студента",
+    "Email": "",
+    "Password": "",
+    "Remember me": "",
+    "Log in": "",
+    "Forgot your password?": "",
+    "Login": "",
+    "Confirm Password": "",
+    "Register": "",
+    "Already registered?": "",
+    "Students": "",
+    "Companies": "",
+    "Offers": "",
+    "Home": "",
+    "Position": "",
+    "Category": "",
+    "City": "",
+    "Region": "",
+    "Salary": "",
+    "app/students.search": "",
+    "Only paid offers": "",
+    "Confirm": "",
+    "Email Password Reset Link": "",
+    "Forgot your password? No problem. Just let us know your email address and we will email you a password reset link that will allow you to choose a new one.": "",
+    "Reset Password": "",
+    "Student": "",
+    "Company": "",
+    "Thanks for signing up! Before getting started, could you verify your email address by clicking on the link we just emailed to you? If you didn't receive the email, we will gladly send you another.": "",
+    "A new verification link has been sent to the email address you provided during registration.": "",
+    "Resend Verification Email": "",
+    "Log out": "",
+    "Profil studenta": "",
     "Create an account for": "",
     "Location*": "",
     "City*": "",
