added all languages

--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -1,3 +1,102 @@
 {
-    "Email": "Email"
+    "Email": "Email",
+    "Password": "Password",
+    "Remember me": "Remember me",
+    "Log in": "Log in",
+    "Forgot your password?": "Forgot your password?",
+    "Login": "Login",
+    "Confirm Password": "Confirm Password",
+    "Register": "Register",
+    "Already registered?": "Already registered?",
+    "Students": "Students",
+    "Companies": "Companies",
+    "Offers": "Offers",
+    "Home": "Home",
+    "Position": "Position",
+    "Category": "Category",
+    "City": "City",
+    "Region": "Region",
+    "Salary": "Salary",
+    "Only paid offers": "Only paid offers",
+    "Confirm": "Confirm",
+    "Email Password Reset Link": "Email Password Reset Link",
+    "Forgot your password? No problem. Just let us know your email address and we will email you a password reset link that will allow you to choose a new one.": "Forgot your password? No problem. Just let us know your email address and we will email you a password reset link that will allow you to choose a new one.",
+    "Reset Password": "Reset Password",
+    "Student": "Student",
+    "Company": "Company",
+    "Thanks for signing up! Before getting started, could you verify your email address by clicking on the link we just emailed to you? If you didn't receive the email, we will gladly send you another.": "Thanks for signing up! Before getting started, could you verify your email address by clicking on the link we just emailed to you? If you didn't receive the email, we will gladly send you another.",
+    "A new verification link has been sent to the email address you provided during registration.": "A new verification link has been sent to the email address you provided during registration.",
+    "Resend Verification Email": "Resend Verification Email",
+    "Log out": "Log out",
+    "Profil studenta": "Student profile",
+    "Create an account for": "Create an account for",
+    "Location*": "Location*",
+    "City*": "City*",
+    "First name": "First name",
+    "Second name": "Second name",
+    "Category*": "Category*",
+    "Position*": "Position*",
+    "Whoops! Something went wrong.": "Whoops! Something went wrong.",
+    "Company name": "Company name",
+    "Edit": "Edit",
+    "Search offers": "Search offers",
+    "Back to companies": "Back to companies",
+    "Telephone": "Telephone",
+    "Add new offer": "Add new offer",
+    "About company": "About company",
+    "Applicants of your offers": "Applicants of your offers",
+    "Your applications": "Your applications",
+    "Applied": "Applied",
+    "Favourite offers": "Favourite offers",
+    "Dashboard": "Dashboard",
+    "Your offers": "Your offers",
+    "Type*": "Type*",
+    "Offer duration (in days)*": "Offer duration (in days)*",
+    "Job start date": "Job start date",
+    "Job duration (in days)": "Job duration (in days)",
+    "Edit an offer": "Edit an offer",
+    "Vacancies": "Vacancies",
+    "Decription*": "Decription*",
+    "Add": "Add",
+    "Update": "Update",
+    "Change email adress": "Change email adress",
+    "Confirm your password": "Confirm your password",
+    "Change email": "Change email",
+    "Change your password": "Change your password",
+    "Your current password": "Your current password",
+    "New password": "New password",
+    "Confirm new password": "Confirm new password",
+    "Change password": "Change password",
+    "Applications": "Applications",
+    "Settings": "Settings",
+    "Profile": "Profile",
+    "Favourites": "Favourites",
+    "Applicants": "Applicants",
+    "Back to offers": "Back to offers",
+    "Unfavourite": "Unfavourite",
+    "Favourite": "Favourite",
+    "Apply": "Apply",
+    "Your application was send": "Your application was send",
+    "Company category": "Company category",
+    "Offer details": "Offer details",
+    "Oferta archiwalna": "Archive offer",
+    "Sitemap": "Sitemap",
+    "Admin": "Admin",
+    "Nazwa uczelni": "University name",
+    "Back to students": "Back to students",
+    "Education": "Education",
+    "About student": "About student",
+    "Post an offer": "Post an offer",
+    "Browse candidates": "Browse candidates",
+    "Find a job": "Find a job",
+    "Edit profile": "Edit profile",
+    "Logout": "Logout",
+    "Update profile": "Update profile",
+    "Update your profile": "Update your profile",
+    "applicants": "applicants",
+    "Are you sure?": "Are you sure?",
+    "Delete": "Delete",
+    "Image": "Image",
+    "Recommended size is 1024x320px.": "Recomended size is 1024x320px.",
+    "Upload": "Upload"
 }
