--- a/resources/lang/pl.json
+++ b/resources/lang/pl.json
@@ -1,94 +1,102 @@
 {
-    "Email": "",
-    "Password": "",
-    "Remember me": "",
-    "Log in": "",
-    "Forgot your password?": "",
-    "Login": "",
-    "Confirm Password": "",
-    "Register": "",
-    "Already registered?": "",
-    "Students": "",
-    "Companies": "",
-    "Offers": "",
-    "Home": "",
-    "Position": "",
-    "Category": "",
-    "City": "",
-    "Region": "",
-    "Salary": "",
-    "app/students.search": "",
-    "Only paid offers": "",
-    "Confirm": "",
-    "Email Password Reset Link": "",
-    "Forgot your password? No problem. Just let us know your email address and we will email you a password reset link that will allow you to choose a new one.": "",
-    "Reset Password": "",
-    "Student": "",
-    "Company": "",
-    "Thanks for signing up! Before getting started, could you verify your email address by clicking on the link we just emailed to you? If you didn't receive the email, we will gladly send you another.": "",
-    "A new verification link has been sent to the email address you provided during registration.": "",
-    "Resend Verification Email": "",
-    "Log out": "",
-    "Profil studenta": "",
-    "Create an account for": "",
-    "Location*": "",
-    "City*": "",
-    "First name": "",
-    "Last name": "",
-    "Category*": "",
-    "Position*": "",
-    "Whoops! Something went wrong.": "",
-    "Company name": "",
-    "Edit": "",
-    "Search offers": "",
-    "Back to companies": "",
-    "Telephone": "",
-    "Add new offer": "",
-    "About company": "",
-    "Applicants of your offers": "",
-    "Your applications": "",
-    "Applied": "",
-    "Favourite offers": "",
-    "Dashboard": "",
-    "Your offers": "",
-    "Type*": "",
-    "Offer duration (in days)*": "",
-    "Job start date": "",
-    "Job duration (in days)": "",
-    "Edit an offer": "",
-    "Vacancies": "",
-    "Decription*": "",
-    "Add": "",
-    "Update": "",
-    "Change email adress": "",
-    "Confirm your password": "",
-    "Change email": "",
-    "Change your password": "",
-    "Your current password": "",
-    "New password": "",
-    "Confirm new password": "",
-    "Change password": "",
-    "Applications": "",
-    "Settings": "",
-    "Profile": "",
-    "Favourites": "",
-    "Applicants": "",
-    "Back to offers": "",
-    "Unfavourite": "",
-    "Favourite": "",
-    "Apply": "",
-    "Your application was send": "",
-    "Company category": "",
-    "Offer details": "",
-    "Oferta archiwalna": "",
-    "Sitemap": "",
-    "Admin": "",
-    "Nazwa uczelni": "",
-    "Back to students": "",
-    "Education": "",
-    "About student": "",
-    "Post an offer": "",
-    "Browse candidates": "",
-    "Find a job": "",
-    "Edit profile": ""
+    "Email": "Email",
+    "Password": "Hasło",
+    "Remember me": "Zapamiętaj mnie",
+    "Log in": "Zaloguj się",
+    "Forgot your password?": "Nie pamiętasz hasła?",
+    "Login": "Login",
+    "Confirm Password": "Potwierdź hasło",
+    "Register": "Zarejestruj się",
+    "Already registered?": "Już masz konto?",
+    "Students": "Studenci",
+    "Companies": "Firmy",
+    "Offers": "Oferty",
+    "Home": "Strona główna",
+    "Position": "Stanowisko",
+    "Category": "Kategoria",
+    "City": "Miasto",
+    "Region": "Województwo",
+    "Salary": "Wynagrodzenie",
+    "Only paid offers": "Tylko oferty z wynagrodzeniem",
+    "Confirm": "Potwierdź",
+    "Email Password Reset Link": "Link do resetowania hasła e-mail",
+    "Forgot your password? No problem. Just let us know your email address and we will email you a password reset link that will allow you to choose a new one.": "Zapomniałeś hasła? Nie ma problemu. Podaj nam tylko swój adres e-mail, a my wyślemy Ci link do resetowania hasła, który pozwoli Ci wybrać nowe.",
+    "Reset Password": "Resetuj hasło",
+    "Student": "Student",
+    "Company": "Firma",
+    "Thanks for signing up! Before getting started, could you verify your email address by clicking on the link we just emailed to you? If you didn't receive the email, we will gladly send you another.": "Dziękujemy za rejestrację! Zanim zaczniesz, możesz zweryfikować swój adres e-mail, klikając link, który właśnie wysłaliśmy do Ciebie e-mailem? Jeśli nie otrzymałeś e-maila, chętnie wyślemy Ci kolejną wiadomość.",
+    "A new verification link has been sent to the email address you provided during registration.": "Na adres e-mail podany podczas rejestracji został wysłany nowy link weryfikacyjny.",
+    "Resend Verification Email": "Wyślij ponownie wiadomość weryfikacyjną e-mail",
+    "Log out": "Wyloguj się",
+    "Profil studenta": "Profil studenta",
+    "Create an account for": "Załóż konto dla",
+    "Location*": "Lokalizacja*",
+    "City*": "Miasto*",
+    "First name": "Imię",
+    "Second name": "Nazwisko",
+    "Category*": "Kategoria*",
+    "Position*": "Stanowisko*",
+    "Whoops! Something went wrong.": "Ups! Coś poszło nie tak.",
+    "Company name": "Nazwa firmy",
+    "Edit": "Edytuj",
+    "Search offers": "Szukaj oferty",
+    "Back to companies": "Powrót do firm",
+    "Telephone": "Telefon",
+    "Add new offer": "Dodaj nową ofertę",
+    "About company": "O firmie",
+    "Applicants of your offers": "Wnioskodawcy twoich ofert",
+    "Your applications": "Twoje aplikacje",
+    "Applied": "Zarejestrowany",
+    "Favourite offers": "Ulubione oferty",
+    "Dashboard": "Panel sterowania",
+    "Your offers": "Twoje oferty",
+    "Type*": "Rodzaj*",
+    "Offer duration (in days)*": "Czas trwania oferty (w dniach)*",
+    "Job start date": "Data rozpoczęcia pracy",
+    "Job duration (in days)": "Czas trwania pracy (w dniach)",
+    "Edit an offer": "Edytuj ofertę",
+    "Vacancies": "Oferty",
+    "Decription*": "Opis*",
+    "Add": "Dodaj",
+    "Update": "Aktualizuj",
+    "Change email adress": "Zmiana adresu e-mail",
+    "Confirm your password": "Potwierdź swoje hasło",
+    "Change email": "Zmień e-mail",
+    "Change your password": "Zmień swoje hasło",
+    "Your current password": "Twoje aktualne hasło",
+    "New password": "New password",
+    "Confirm new password": "Potwierdź nowe hasło",
+    "Change password": "Zmień hasło",
+    "Applications": "Aplikacje",
+    "Settings": "Ustawienia",
+    "Profile": "Profil",
+    "Favourites": "Ulubione",
+    "Applicants": "Kandydaci",
+    "Back to offers": "Powrót do ofert",
+    "Unfavourite": "Nielubiane",
+    "Favourite": "Ulubione",
+    "Apply": "Aplikuj",
+    "Your application was send": "Twój wniosek został wysłany",
+    "Company category": "Kategoria firmy",
+    "Offer details": "Szczegóły oferty",
+    "Oferta archiwalna": "Oferta archiwalna",
+    "Sitemap": "Mapa strony",
+    "Admin": "Admin",
+    "Nazwa uczelni": "Nazwa uczelni",
+    "Back to students": "Powrót do studentów",
+    "Education": "Edukacja",
+    "About student": "O studencie",
+    "Post an offer": "Zamieść ofertę",
+    "Browse candidates": "Przeglądaj kandydatów",
+    "Find a job": "Znajdź pracę",
+    "Edit profile": "Edytuj profil",
+    "Logout": "Wyloguj się",
+    "Update profile": "Aktualizuj profil",
+    "Update your profile": "Zaktualizuj swój profil",
+    "applicants": "kandydaci",
+    "Are you sure?": "Jesteś pewien?",
+    "Delete": "Usuń",
+    "Image": "Zdjęcie",
+    "Recommended size is 1024x320px.": "Zalecany rozmiar to 1024x320px.",
+    "Upload": "Prześlij"
 }
