--- a/resources/lang/ru.json
+++ b/resources/lang/ru.json
@@ -10,7 +10,7 @@
     "Already registered?": "Уже зарегистрированы?",
     "Students": "Cтуденты",
     "Companies": "Компании",
-    "Offers": "Предложения",
+    "Offers": "Вакансии",
     "Home": "Главная страница",
     "Position": "Должность",
     "Category": "Категория",
@@ -34,28 +34,28 @@
     "Location*": "Местоположение*",
     "City*": "Город*",
     "First name": "Имя",
-    "Last name": "Фамилия",
+    "Second name": "Фамилия",
     "Category*": "Категория*",
     "Position*": "Должность*",
     "Whoops! Something went wrong.": "Упс! Что-то пошло не так.",
     "Company name": "Название компании",
     "Edit": "Изменить",
-    "Search offers": "Поиск предложений",
+    "Search offers": "Поиск вакансий",
     "Back to companies": "Назад к компаниям",
     "Telephone": "Номер телефона",
-    "Add new offer": "Добавить новое предложение",
+    "Add new offer": "Добавить новое вакансию",
     "About company": "О компании",
-    "Applicants of your offers": "Кандидаты на ваши предложения",
+    "Applicants of your offers": "Кандидаты на ваши вакансии",
     "Your applications": "Ваши заявки",
-    "Applied": "",
-    "Favourite offers": "Избранные предложения",
+    "Applied": "Заявленный",
+    "Favourite offers": "Избранные вакансии",
     "Dashboard": "Панель управления",
-    "Your offers": "Ваши предложения",
+    "Your offers": "Ваши вакансии",
     "Type*": "Тип",
-    "Offer duration (in days)*": "Продолжительность предложения (в днях)*",
+    "Offer duration (in days)*": "Продолжительность вакансии (в днях)*",
     "Job start date": "Дата начала работы",
     "Job duration (in days)": "Длительность работы (в днях)",
-    "Edit an offer": "Редактировать предложение",
+    "Edit an offer": "Редактировать вакансию",
     "Vacancies": "Вакансии",
     "Decription*": "Описание*",
     "Add": "Добавить",
@@ -73,32 +73,32 @@
     "Profile": "Аккаунт",
     "Favourites": "Избранные",
     "Applicants": "Кандидаты",
-    "Back to offers": "Вернуться к предложениям",
+    "Back to offers": "Вернуться к вакансиям",
     "Unfavourite": "Нелюбимые",
     "Favourite": "Избранное",
     "Apply": "Отправить заявку",
     "Your application was send": "Ваша заявка была отправлена",
     "Company category": "Категория компании",
-    "Offer details": "Детали предложения",
-    "Oferta archiwalna": "Архивное предложение",
+    "Offer details": "Детали вакансии",
+    "Oferta archiwalna": "Архивная вакансия",
     "Sitemap": "Карта сайта",
     "Admin": "Администратор",
     "Nazwa uczelni": "Название университета",
     "Back to students": "Вернуться к студентам",
     "Education": "Образование",
     "About student": "О студентах",
-    "Post an offer": "Опубликовать предложение",
+    "Post an offer": "Опубликовать вакансию",
     "Browse candidates": "Просмотреть кандидатов",
     "Find a job": "Найти работу",
     "Edit profile": "Редактировать профиль",
     "Logout": "Выход",
     "Update profile": "Обновить профиль",
-    "Update your profile": "Обновление вашего профиля",
+    "Update your profile": "Обновить ваш профиль",
     "applicants": "Кандидаты",
     "Are you sure?": "Вы уверенны?",
     "Delete": "Удалить",
     "Image": "Изображение",
-    "Recomended size is 1024x320px.": "Рекомендованный размер - 1024х320px",
+    "Recommended size is 1024x320px.": "Рекомендованный размер - 1024х320px",
     "Upload": "Загрузить"
 
 }
