--- a/resources/lang/uk.json
+++ b/resources/lang/uk.json
@@ -1,95 +1,104 @@
 {
     "Email": "Email",
     "Password": "Пароль",
-    "Remember me": "Запомнить меня",
-    "Log in": "Войти",
-    "Forgot your password?": "Забыли свой пароль?",
-    "Login": "Войти",
-    "Confirm Password": "Подтвердите пароль",
-    "Register": "Регистрация",
-    "Already registered?": "Уже зарегистрированы?",
-    "Students": "Cтуденты",
-    "Companies": "Компании",
-    "Offers": "Вакансии",
-    "Home": "Главная страница",
-    "Position": "Должность",
-    "Category": "Категория",
-    "City": "Город",
-    "Region": "Регион",
+    "Remember me": "Запам'ятати мене",
+    "Log in": "Увійти",
+    "Forgot your password?": "Забули свій пароль?",
+    "Login": "Увійти",
+    "Confirm Password": "Підтвердіть пароль",
+    "Register": "Реєстрація",
+    "Already registered?": "Вже зареєстровані?",
+    "Students": "Студенти",
+    "Companies": "Фірма",
+    "Offers": "Вакансії",
+    "Home": "Головна сторінка",
+    "Position": "Посада",
+    "Category": "Категорія",
+    "City": "Місто",
+    "Region": "Регіон",
     "Salary": "Зарплата",
-    "app/students.search": "Поиск",
-    "Only paid offers": "Только оплачиваемые вакансии",
-    "Confirm": "Подтвердить",
-    "Email Password Reset Link": "Ссылка для сброса пароля по электронной почте",
-    "Forgot your password? No problem. Just let us know your email address and we will email you a password reset link that will allow you to choose a new one.": "Забыли пароль? Нет проблем. Просто сообщите нам свой адрес электронной почты, и мы пришлем вам ссылку для сброса пароля, по которой вы сможете выбрать новый.",
-    "Reset Password": "Сброс пароля",
+    "Search": "Пошук",
+    "Only paid offers": "Тільки оплачувані вакансії",
+    "Confirm": "Підтвердити",
+    "Email Password Reset Link": "Посилання для відновлення паролю по електронній пошті",
+    "Forgot your password? No problem. Just let us know your email address and we will email you a password reset link that will allow you to choose a new one.": "Забули пароль? Немає проблем. Просто повідомте нам свою адресу електронної пошти, і ми надішлемо вам посилання для відновлення паролю, по якій ви зможете вибрати новий.",
+    "Reset Password": "Відновлення паролю",
     "Student": "Студент",
-    "Company": "Компания",
-    "Thanks for signing up! Before getting started, could you verify your email address by clicking on the link we just emailed to you? If you didn't receive the email, we will gladly send you another.": "Спасибо, что зарегистрировались! Прежде чем приступить к работе, не могли бы вы подтвердить свой адрес электронной почты, нажав на ссылку, которую мы только что отправили вам по электронной почте? Если вы не получили письмо, мы с радостью вышлем вам другое.",
-    "A new verification link has been sent to the email address you provided during registration.": "На адрес электронной почты, указанный вами при регистрации, была отправлена новая ссылка для проверки.",
-    "Resend Verification Email": "Повторная отправка проверочного письма",
-    "Log out": "Выйти",
-    "Profil studenta": "Профиль студента",
-    "Create an account for": "",
-    "Location*": "",
-    "City*": "",
-    "First name": "",
-    "Last name": "",
-    "Category*": "",
-    "Position*": "",
-    "Whoops! Something went wrong.": "",
-    "Company name": "",
-    "Edit": "",
-    "Search offers": "",
-    "Back to companies": "",
-    "Telephone": "",
-    "Add new offer": "",
-    "About company": "",
-    "Applicants of your offers": "",
-    "Your applications": "",
-    "Applied": "",
-    "Favourite offers": "",
-    "Dashboard": "",
-    "Your offers": "",
-    "Type*": "",
-    "Offer duration (in days)*": "",
-    "Job start date": "",
-    "Job duration (in days)": "",
-    "Edit an offer": "",
-    "Vacancies": "",
-    "Decription*": "",
-    "Add": "",
-    "Update": "",
-    "Change email adress": "",
-    "Confirm your password": "",
-    "Change email": "",
-    "Change your password": "",
-    "Your current password": "",
-    "New password": "",
-    "Confirm new password": "",
-    "Change password": "",
-    "Applications": "",
-    "Settings": "",
-    "Profile": "",
-    "Favourites": "",
-    "Applicants": "",
-    "Back to offers": "",
-    "Unfavourite": "",
-    "Favourite": "",
-    "Apply": "",
-    "Your application was send": "",
-    "Company category": "",
-    "Offer details": "",
-    "Oferta archiwalna": "",
-    "Sitemap": "",
-    "Admin": "",
-    "Nazwa uczelni": "",
-    "Back to students": "",
-    "Education": "",
-    "About student": "",
-    "Post an offer": "",
-    "Browse candidates": "",
-    "Find a job": "",
-    "Edit profile": ""
+    "Company": "Фірма",
+    "Thanks for signing up! Before getting started, could you verify your email address by clicking on the link we just emailed to you? If you didn't receive the email, we will gladly send you another.": "Дякуємо, що зареєструвалися! Перш ніж приступити до роботи, не могли б ви підтвердити свою адресу електронної пошти, натиснувши на посилання, яку ми тільки що відправили вам по електронній пошті? Якщо ви не отримали листа, ми з радістю надішлемо вам інше.",
+    "A new verification link has been sent to the email address you provided during registration.": "На адресу електронної пошти, вказану вами при реєстрації, була відправлена ​​нова посилання для перевірки.",
+    "Resend Verification Email": "Повторна відправка перевірочного листа",
+    "Log out": "Вийти",
+    "Profil studenta": "Профіль студента",
+    "Create an account for": "Створіть акаунт для",
+    "Location*": "Місцезнаходження *",
+    "City*": "Місто*",
+    "First name": "Ім'я",
+    "Second name": "Прізвище",
+    "Category*": "Категорія*",
+    "Position*": "Посада*",
+    "Whoops! Something went wrong.": "Упс! Щось пішло не так.",
+    "Company name": "Назва фірми",
+    "Edit": "Редагувати",
+    "Search offers": "Пошук вакансій",
+    "Back to companies": "Назад до фірм",
+    "Telephone": "Номер телефону",
+    "Add new offer": "Додати нову вакансію",
+    "About company": "Про фірму",
+    "Applicants of your offers": "Кандидати на Ваші вакансії",
+    "Your applications": "Ваші заявки",
+    "Applied": "Заявлений",
+    "Favourite offers": "Улюблені вакансії",
+    "Dashboard": "Панель управління",
+    "Your offers": "Ваші вакансії",
+    "Type*": "Тип",
+    "Offer duration (in days)*": "Тривалість вакансії (в днях)*",
+    "Job start date": "Дата початку роботи",
+    "Job duration (in days)": "Тривалість роботи (в днях)",
+    "Edit an offer": "Редагувати вакансію",
+    "Vacancies": "Вакансії",
+    "Decription*": "Опис*",
+    "Add": "Додати",
+    "Update": "Оновити",
+    "Change email adress": "Змінити адресу електронної пошти",
+    "Confirm your password": "Підтвердіть свій пароль",
+    "Change email": "Змінити пошту",
+    "Change your password": "Змінити Ваш пароль",
+    "Your current password": "Ваш поточний пароль",
+    "New password": "Новий пароль",
+    "Confirm new password": "Підтвердити новий пароль",
+    "Change password": "Змінити пароль",
+    "Applications": "Заявки",
+    "Settings": "Налаштування",
+    "Profile": "Аккаунт",
+    "Favourites": "Улюблені",
+    "Applicants": "Кандидати",
+    "Back to offers": "Повернутися до вакансій",
+    "Unfavourite": "Не улюблений",
+    "Favourite": "Улюблені",
+    "Apply": "Відправити запит",
+    "Your application was send": "Ваша заявка була відправлена",
+    "Company category": "Категорія компанії",
+    "Offer details": "Деталі вакансії",
+    "Oferta archiwalna": "Архівна вакансія",
+    "Sitemap": "Карта сайту",
+    "Admin": "Адміністратор",
+    "Nazwa uczelni": "Назва університету",
+    "Back to students": "Повернутися до студентів",
+    "Education": "Освіта",
+    "About student": "Про студентів",
+    "Post an offer": "Опублікувати вакансію",
+    "Browse candidates": "Переглянути кандидатів",
+    "Find a job": "Знайти роботу",
+    "Edit profile": "Редагувати профіль",
+    "Logout": "Вихід",
+    "Update profile": "Оновити профіль",
+    "Update your profile": "Оновити ваш профіль",
+    "applicants": "Кандидати",
+    "Are you sure?": "Ви впевнені?",
+    "Delete": "Видалити",
+    "Image": "зображення",
+    "Recommended size is 1024x320px.": "Рекомендований розмір - 1024х320px",
+    "Upload": "Завантажити"
 
 }
