--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -31,6 +31,7 @@
     "Profil studenta": "Student profile",
     "Create an account for": "Create an account for",
     "Location*": "Location*",
+    "Location": "Location",
     "City*": "City*",
     "First name": "First name",
     "Second name": "Second name",
@@ -56,7 +57,8 @@
     "Job duration (in days)": "Job duration (in days)",
     "Edit an offer": "Edit an offer",
     "Vacancies": "Vacancies",
-    "Decription*": "Decription*",
+    "Description*": "Description*",
+    "Description": "Description",
     "Add": "Add",
     "Update": "Update",
     "Change email adress": "Change email adress",
@@ -98,5 +100,18 @@
     "Delete": "Delete",
     "Image": "Image",
     "Recommended size is 1024x320px.": "Recomended size is 1024x320px.",
-    "Upload": "Upload"
+    "Upload": "Upload",
+    "Size": "Size",
+    "Szukasz praktyk?": "Looking for internships?",
+    "Przeglądaj oferty praktyk i stażów i zdobądź wymagane doświadczenie by być konkurencyjnym na rynku pracy.": "Browse internship and apprenticeship opportunities and gain the required experience to be competitive in the job market.",
+    "Zarejestruj się": "Sign up",
+    "Sprawdź oferty": "Check offers",
+    "Rodzaj zatrudnienia": "Employment type",
+    "Recomended size is 64x64px": "Recomended size is 64x64px",
+    "Email kontaktowy": "Contact email",
+    "Numer telefonu": "Phone number",
+    "Website": "Website",
+    "Skills": "Skills",
+    "Edukacja": "Education",
+    "Add offer": "Add offer"
 }
