--- a/resources/lang/pl.json
+++ b/resources/lang/pl.json
@@ -31,6 +31,7 @@
     "Profil studenta": "Profil studenta",
     "Create an account for": "Załóż konto dla",
     "Location*": "Lokalizacja*",
+    "Location": "Lokalizacja",
     "City*": "Miasto*",
     "First name": "Imię",
     "Second name": "Nazwisko",
@@ -56,7 +57,8 @@
     "Job duration (in days)": "Czas trwania pracy (w dniach)",
     "Edit an offer": "Edytuj ofertę",
     "Vacancies": "Oferty",
-    "Decription*": "Opis*",
+    "Description*": "Opis*",
+    "Description": "Opis",
     "Add": "Dodaj",
     "Update": "Aktualizuj",
     "Change email adress": "Zmiana adresu e-mail",
@@ -98,5 +100,18 @@
     "Delete": "Usuń",
     "Image": "Zdjęcie",
     "Recommended size is 1024x320px.": "Zalecany rozmiar to 1024x320px.",
-    "Upload": "Prześlij"
+    "Upload": "Prześlij",
+    "Size": "Rozmiar",
+    "Szukasz praktyk?": "Szukasz praktyk?",
+    "Przeglądaj oferty praktyk i stażów i zdobądź wymagane doświadczenie by być konkurencyjnym na rynku pracy.": "Przeglądaj oferty praktyk i stażów i zdobądź wymagane doświadczenie by być konkurencyjnym na rynku pracy.",
+    "Zarejestruj się": "Zarejestruj się",
+    "Sprawdź oferty": "Sprawdź oferty",
+    "Rodzaj zatrudnienia": "Rodzaj zatrudnienia",
+    "Recomended size is 64x64px": "Zalecany rozmiar to 64x64px",
+    "Email kontaktowy": "Email kontaktowy",
+    "Numer telefonu": "Numer telefonu",
+    "Website": "Strona internetowa",
+    "Skills": "Umiejętności",
+    "Edukacja": "Edukacja",
+    "Add offer": "Dodaj ofertę"
 }
