--- a/resources/lang/ru.json
+++ b/resources/lang/ru.json
@@ -32,6 +32,7 @@
     "Profil studenta": "Профиль студента",
     "Create an account for": "Создайте аккаунт для",
     "Location*": "Местоположение*",
+    "Location": "Местоположение",
     "City*": "Город*",
     "First name": "Имя",
     "Second name": "Фамилия",
@@ -57,7 +58,8 @@
     "Job duration (in days)": "Длительность работы (в днях)",
     "Edit an offer": "Редактировать вакансию",
     "Vacancies": "Вакансии",
-    "Decription*": "Описание*",
+    "Description*": "Описание*",
+    "Description": "Описание",
     "Add": "Добавить",
     "Update": "Обновить",
     "Change email adress": "Изменить адрес электронной почты",
@@ -98,7 +100,19 @@
     "Are you sure?": "Вы уверенны?",
     "Delete": "Удалить",
     "Image": "Изображение",
-    "Recommended size is 1024x320px.": "Рекомендованный размер - 1024х320px",
-    "Upload": "Загрузить"
+    "Upload": "Загрузить",
+    "Size": "Размер",
+    "Szukasz praktyk?": "Ищешь практику?",
+    "Przeglądaj oferty praktyk i stażów i zdobądź wymagane doświadczenie by być konkurencyjnym na rynku pracy.": "Ознакомьтесь с возможностями прохождения практики и стажировки и получите необходимый опыт, чтобы быть конкурентоспособным на рынке труда.",
+    "Zarejestruj się": "Зарегистрируйся",
+    "Sprawdź oferty": "Проверь вакансии",
+    "Rodzaj zatrudnienia": "Тип трудоустройства",
+    "Recomended size is 64x64px": "Рекомендованный размер - 64х64px",
+    "Email kontaktowy": "Контактный e-mail",
+    "Numer telefonu": "Номер телефона",
+    "Website": "Веб-сайт",
+    "Skills": "Навыки",
+    "Edukacja": "Образование",
+    "Add offer": "Добавить вакансию"
 
 }
