--- a/resources/lang/uk.json
+++ b/resources/lang/uk.json
@@ -31,7 +31,8 @@
     "Log out": "Вийти",
     "Profil studenta": "Профіль студента",
     "Create an account for": "Створіть акаунт для",
-    "Location*": "Місцезнаходження *",
+    "Location*": "Місцезнаходження*",
+    "Location": "Місцезнаходження",
     "City*": "Місто*",
     "First name": "Ім'я",
     "Second name": "Прізвище",
@@ -57,7 +58,8 @@
     "Job duration (in days)": "Тривалість роботи (в днях)",
     "Edit an offer": "Редагувати вакансію",
     "Vacancies": "Вакансії",
-    "Decription*": "Опис*",
+    "Description*": "Опис*",
+    "Description": "Опис",
     "Add": "Додати",
     "Update": "Оновити",
     "Change email adress": "Змінити адресу електронної пошти",
@@ -99,6 +101,19 @@
     "Delete": "Видалити",
     "Image": "зображення",
     "Recommended size is 1024x320px.": "Рекомендований розмір - 1024х320px",
-    "Upload": "Завантажити"
+    "Upload": "Завантажити",
+    "Size": "Розмір",
+    "Szukasz praktyk?": "Шукаєш практику?",
+    "Przeglądaj oferty praktyk i stażów i zdobądź wymagane doświadczenie by być konkurencyjnym na rynku pracy.": "Переглянь пропозиції практики та стажування та отримай необхідний досвід, щоб бути конкурентоспроможними на ринку праці.",
+    "Zarejestruj się": "Зареєструйся",
+    "Sprawdź oferty": "Перевір вакансії",
+    "Rodzaj zatrudnienia": "Вид зайнятості",
+    "Recomended size is 64x64px": "Рекомендований розмір - 64х64px",
+    "Email kontaktowy": "Контактна електронна адреса",
+    "Numer telefonu": "Номер телефону",
+    "Website": "Веб-сайт",
+    "Skills": "Навички",
+    "Edukacja": "Освіта",
+    "Add offer": "Додати вакансію"
 
 }
